# wit-resolver

./: README.md  flake.nix  justfile  knope.toml  package.json
.changeset/: changing_the_way_in_which_the_resolver_is_constructed.md
.github/workflows/: build.yml
wit-resolver-ts/: CHANGELOG.md  README.md  justfile  package-lock.json  package.json  tsconfig.json  vitest.config.js
wit-resolver-ts/src/: index.js  index.test.ts  index.ts  resolver.test.ts  resolver.ts  schema.test.ts  schema.ts  types.ts  wit_resolver_wasm.core.wasm  wit_resolver_wasm.core2.wasm  wit_resolver_wasm.d.ts  wit_resolver_wasm.js
wit-resolver-ts/src/__snapshots__/: index.test.ts.snap  resolver.test.ts.snap
wit-resolver-ts/src/interfaces/: eastpole-wit-resolver-types.d.ts
wit-resolver-wasm/: Cargo.toml  justfile
wit-resolver-wasm/src/: bindings.rs  lib.rs
wit-resolver-wasm/wit/: world.wit
