[package]
name = "wit-resolver-wasm"
version = "0.1.1"
edition = "2024"

[dependencies]
serde = "1.0.219"
serde_json = "1.0.140"
wit-bindgen-rt = { version = "0.41.0", features = ["bitflags"] }
wit-parser = { version = "0.229.0", features = ["serde"] }

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "eastpole:wit-resolver"

[package.metadata.component.dependencies]

[package.metadata.component.target]
path = "wit/world.wit"
world = "wit-resolver"
